Apply suggestion from @Arraying
Co-authored-by: Paul Hübner <paul.huebner@googlemail.com>